<resources>
    <!-- 클라우드 서버 http://1.250.62.149/-->
    <!-- 아카데미 서버 http://192.168.40.20/odw/-->
    <!-- 로컬 서버 http://10.0.2.2/odw/-->
    <string name="app_name">하루일감</string>
    <string name="url">http://192.168.40.20/odw/</string>

    <!-- activity_candidate -->
    <string name="material_calendar_monday">월</string>
    <string name="material_calendar_tuesday">화</string>
    <string name="material_calendar_wednesday">수</string>
    <string name="material_calendar_thursday">목</string>
    <string name="material_calendar_friday">금</string>
    <string name="material_calendar_saturday">토</string>
    <string name="material_calendar_sunday">일</string>
    <!--//end activity_candidate-->

    <!-- Calendar -->
    <array name="material_calendar_months_array">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </array>

    <string name="material_calendar_today_button">오늘</string>
    <string name="material_calendar_positive_button">확인</string>
    <string name="material_calendar_negative_button">취소</string>

    <!-- activity_login-->
    <string name="activity_login_find_ID_and_PW">아이디 / 비밀번호 찾기</string>
    <string name="activity_login_joinUser">혹시, 하루살이가 처음이신가요?</string>
    <string name="activity_login_joinUser2">회원가입</string>
    <string name="activity_login_tabItem1">구직자 로그인</string>
    <string name="activity_login_tabItem2">구인자 로그인</string>
    <!-- //end activity_login -->

    <!-- login_seeker_fragment -->
    <string name="login_seeker_fragment1">아이디를 입력하세요</string>
    <string name="login_seeker_fragment2">패스워드를 입력하세요</string>
    <string name="login_seeker_fragment3">로그인</string>
    <!-- //end login_seeker_fragment -->

    <!-- login_offer_fragment -->
    <string name="login_offer_fragment1">아이디를 입력하세요</string>
    <string name="login_offer_fragment2">패스워드를 입력하세요</string>
    <string name="login_offer_fragment3">로그인</string>
    <!-- //end login_offer_fragment -->

    <string name="go_to_login">로그인 페이지로 가기</string>

    <!-- join_front_fragment -->
    <string name="join_front_fragment1">일용직 회원 가입</string>
    <string name="join_front_fragment2">사업자 회원 가입</string>
    <!-- //end join_front_fragment -->

    <!--find_select_fragment-->
    <string name="fragment_find_tabItem1">구직자</string>
    <string name="fragment_find_tabItem2">구인자</string>
    <!--//end find_select_fragment-->

    <!--find_front_fragment-->
    <string name="find_front_fragment1">아이디 찾기</string>
    <string name="find_front_fragment2">비밀번호 변경</string>
    <!--//end find_front_fragment-->

    <!--find_seeker_fragment-->
    <string name="find_seeker_fragment3">아이디 입력</string>
    <string name="find_seeker_fragment1">이메일 입력</string>
    <string name="find_seeker_fragment2">이름 입력</string>
    <!--//end find_seeker_fragment-->

    <!--find_offer_fragment-->
    <string name="find_offer_fragment3">아이디 입력</string>
    <string name="find_offer_fragment1">이메일 입력</string>
    <string name="find_offer_fragment2">이름 입력</string>
    <!--//end find_offer_fragment-->


    <!-- join_seeker_fragment -->
    <string name="join_seeker_fragment1">아이디를 입력하세요</string>
    <string name="join_seeker_fragment2">아이디</string>
    <string name="join_seeker_fragment3">비밀번호</string>
    <string name="join_seeker_fragment4">비밀번호를 입력하세요</string>
    <string name="join_seeker_fragment5">이름을 입력하세요</string>
    <string name="join_seeker_fragment6">이름</string>
    <string name="join_seeker_fragment7">성별</string>
    <string name="join_seeker_fragment8">남자</string>
    <string name="join_seeker_fragment9">여자</string>
    <string name="join_seeker_fragment10">이메일</string>
    <string name="join_seeker_fragment11">example@lx.org</string>
    <string name="join_seeker_fragment12">회원 가입</string>
    <string name="join_seeker_fragment13">비밀번호 확인</string>
    <string name="join_seeker_fragment14">중복 체크</string>
    <string name="join_seeker_fragment15">비밀번호를 다시 입력하세요</string>
    <string name="join_seeker_fragment16">주소</string>
    <string name="join_seeker_fragment17">서울특별시 강남구 OO로 00길, 상세주소 </string>
    <string name="navigation_drawer_open">열기</string>
    <string name="navigation_drawer_close">닫기</string>
    <!-- //end join_seeker_fragment -->

    <!-- join_offer_fragment -->
    <string name="join_offer_fragment1">아이디를 입력하세요</string>
    <string name="join_offer_fragment2">아이디</string>
    <string name="join_offer_fragment3">비밀번호</string>
    <string name="join_offer_fragment4">비밀번호를 입력하세요</string>
    <string name="join_offer_fragment5">이름을 입력하세요</string>
    <string name="join_offer_fragment6">이름</string>
    <string name="join_offer_fragment7">구인자 계좌</string>
    <string name="join_offer_fragment8">거래은행</string>
    <string name="join_offer_fragment9">맡기신 금액</string>
    <string name="join_offer_fragment10">이메일</string>
    <string name="join_offer_fragment11">example@lx.org</string>
    <string name="join_offer_fragment12">회원 가입</string>
    <string name="join_offer_fragment13">비밀번호 확인</string>
    <string name="join_offer_fragment14">중복 체크</string>
    <string name="join_offer_fragment15">비밀번호를 다시 입력하세요</string>
    <string name="join_offer_fragment16">회사명</string>
    <string name="join_offer_fragment17">주소</string>
    <string name="join_offer_fragment18">서울특별시 강남구 OO로 00길, 상세주소 </string>
    <string name="navigation_drawer_open1">열기</string>
    <string name="navigation_drawer_close1">닫기</string>
    <string name="activity_candidate1">모집정보</string>
    <string name="activity_candidate2">직종</string>
    <string name="activity_candidate3">jobName</string>
    <string name="activity_candidate4">급여</string>
    <string name="activity_candidate5">jobPay</string>
    <string name="activity_candidate6">원</string>
    <string name="activity_candidate7">요구자격</string>
    <string name="activity_candidate8">jobRequirement</string>
    <string name="activity_candidate9">날짜선택</string>
    <string name="activity_candidate10">선택날짜</string>
    <string name="activity_candidate11">날짜를 선택하세요</string>
    <string name="activity_candidate12">인원</string>
    <string name="activity_candidate13">0</string>
    <string name="activity_candidate14">/</string>
    <string name="activity_candidate15">0</string>
    <string name="activity_candidate16">명</string>
    <string name="activity_candidate17">신청하기</string>

    <!--Client_Pw_alter -->
    <string name="client_pw_alter">비밀번호 변경</string>
    <string name="client_pw_alter_check">비밀번호 변경 확인</string>

    <!--//Client_Pw_alter-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- //end join_seeker_fragment -->

</resources>

