<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- 아이디 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment2" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerIdInput"
            style="@style/offerEditText"
            android:layout_weight="2"
            android:hint="@string/join_offer_fragment1"
            android:inputType="text"
            app:theme="@style/offerEditText" />

        <Button
            android:id="@+id/checkIdOverlapButton1"
            style="@style/offerButton"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/join_offer_fragment14" />
    </LinearLayout>

    <!-- 패스워드 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment3" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerPwInput"
            style="@style/offerEditText"
            android:hint="@string/join_offer_fragment4"
            android:inputType="textPassword"
            app:theme="@style/offerEditText" />
    </LinearLayout>

    <!-- 패스워드 재입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment13" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerPwReInput"
            style="@style/offerEditText"
            android:hint="@string/join_offer_fragment15"
            android:inputType="textPassword"
            app:theme="@style/offerEditText" />
    </LinearLayout>
    <!-- 이름 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment6" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerNameInput"
            style="@style/offerEditText"
            android:hint="@string/join_offer_fragment5"
            android:inputType="text"
            app:theme="@style/offerEditText" />
    </LinearLayout>

    <!-- offer_account 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment7" />

        <Spinner
            android:id="@+id/accountSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            >

        </Spinner>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerAccountInput"
            style="@style/offerEditText"
            android:layout_weight="2"
            android:hint="@string/join_offer_fragment7"
            android:inputType="text|number"
            app:theme="@style/offerEditText" />

    </LinearLayout>

    <!-- 이메일 입력 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment10" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerEmailInput"
            style="@style/offerEditText"
            android:hint="@string/join_offer_fragment11"
            android:inputType="textEmailAddress"
            app:theme="@style/offerEditText" />

    </LinearLayout>

    <!-- 회사명-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_offer_fragment16" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/companyNameInput"
            style="@style/offerEditText"
            android:inputType="text"
            app:theme="@style/offerEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/blackTextView"
            android:text="@string/join_seeker_fragment16"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/offerAddressInput"
            style="@style/offerEditText"
            app:theme="@style/offerEditText"
            android:hint="@string/join_offer_fragment18"/>

    </LinearLayout>
    <!---->

    <!-- 회원가입 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/offerJoinButton"
            style="@style/offerButton"
            android:text="@string/join_offer_fragment12"/>
    </LinearLayout>

</LinearLayout>
