<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".offer.RegistWorkActivity">

    <!-- container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".offer.RegistWorkActivity"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offer"
            app:title="일감 등록하기">

        </android.support.v7.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            style="@style/itemTextView"
            android:text="@string/activity_candidate1"/>

        <!-- 모집 정보 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/offer_border"
            android:layout_margin="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <!-- 직군 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobName"
                    android:layout_width="wrap_content"
                    style="@style/offerItemText"
                    android:text="@string/activity_candidate3"/>

            </LinearLayout>
            <!-- //end 직군 -->

            <!-- 급여 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate4" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobPay"
                    android:layout_width="wrap_content"
                    android:layout_margin="0dp"
                    style="@style/offerItemText"
                    android:text="@string/activity_candidate5"/>

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/offerItemText"
                    android:text="@string/activity_candidate6"/>

            </LinearLayout>
            <!-- //end 급여 -->

            <!-- 요구자격 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate7" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobRequirement"
                    android:layout_width="wrap_content"
                    style="@style/offerItemText"
                    android:text="@string/activity_candidate8"/>

            </LinearLayout>
            <!-- //end 요구자격 -->

        </LinearLayout>
        <!-- //end 모집정보 -->

        <TextView
            android:layout_width="wrap_content"
            style="@style/itemTextView"
            android:text="@string/activity_candidate9"/>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:selectionColor="@color/offer"
            app:selectionLabelColor="@color/offer"
            app:disabledDaysLabelsColor="@color/danger"
            app:type="one_day_picker">

        </com.applandeo.materialcalendarview.CalendarView>

        <!-- 신청 정보 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <DatePicker
                android:id="@+id/selectDay"
                style="@style/offerItemText"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/activity_candidate11" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/itemTextView"
                android:text="@string/activity_candidate12" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/currentCount"
                style="@style/offerItemText"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_candidate13" />

            <TextView
                style="@style/offerItemText"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_candidate14" />

            <TextView
                android:id="@+id/limitCount"
                style="@style/offerItemText"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_candidate15" />

            <TextView
                style="@style/offerItemText"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/activity_candidate16" />

        </LinearLayout>

        <Button
            android:id="@+id/candidateButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            style="@style/offerButton"
            android:text="@string/activity_candidate17"/>

    </LinearLayout>
    <!-- //end container -->

</ScrollView>
