<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seeker.find.CandidateActivity"
    android:background="@drawable/seeker_rectangle_border">

    <!-- container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".seeker.find.CandidateActivity"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seeker"
            app:title="일감 지원하기">

        </android.support.v7.widget.Toolbar>
        <TextView
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            style="@style/itemTextView"
            android:text="@string/activity_candidate1"/>

        <!-- 모집 정보 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/seeker_rectangle_border"
            android:paddingEnd="10dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <!-- 직군 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobName"
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:text="@string/activity_candidate3"/>

            </LinearLayout>
            <!-- //end 직군 -->

            <!-- 급여 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate4" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobPay"
                    android:layout_width="wrap_content"
                    android:layout_margin="0dp"
                    style="@style/seekerItemText"
                    android:text="@string/activity_candidate5"/>

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:text="@string/activity_candidate6"/>

            </LinearLayout>
            <!-- //end 급여 -->

            <!-- 요구자격 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate7" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jobRequirement"
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:text="@string/activity_candidate8"/>

            </LinearLayout>
            <!-- //end 요구자격 -->

        </LinearLayout>
        <!-- //end 모집정보 -->

        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            style="@style/itemTextView"
            android:layout_gravity="center"
            android:text="@string/activity_candidate9"/>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionColor="@color/offer"
            app:selectionLabelColor="@color/seeker"
            app:disabledDaysLabelsColor="@color/danger"
            app:type="one_day_picker"
            android:layout_marginHorizontal="3dp"
            app:eventsEnabled="true">

        </com.applandeo.materialcalendarview.CalendarView>

        <!-- 신청 정보 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/seeker_rectangle_border"
            android:paddingEnd="10dp"
            tools:targetApi="o"
            tools:ignore="RtlSymmetry">

            <!-- 모집 인원 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate10" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/selectDay"
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:layout_margin="5dp"
                    android:text="@string/activity_candidate11" />

            </LinearLayout>
            <!-- //end 모집 인원 -->

            <!-- 모집 인원 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/activity_candidate12" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/currentCount"
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:layout_margin="5dp"
                    android:text="@string/activity_candidate13" />

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:layout_margin="5dp"
                    android:text="@string/activity_candidate14" />

                <TextView
                    android:id="@+id/limitCount"
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:layout_margin="5dp"
                    android:text="@string/activity_candidate15" />

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/seekerItemText"
                    android:layout_margin="10dp"
                    android:text="@string/activity_candidate16" />

            </LinearLayout>
            <!-- //end 모집 인원 -->

        </LinearLayout>

        <Button
            android:id="@+id/candidateButton"
            android:layout_width="match_parent"
            style="@style/seekerButton"
            android:text="@string/activity_candidate17"/>

    </LinearLayout>
    <!-- //end container -->

</ScrollView>
