<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/seekerIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_seeker_fragment1" />

    <EditText
        android:layout_marginVertical="10dp"
        android:id="@+id/seekerPwInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_seeker_fragment2"/>

    <Button
        android:id="@+id/seekerLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/login_seeker_fragment3"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/seeker"/>
</LinearLayout>